# StaticFIRFilter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StaticFIRFilter.hpp  fir.py  test.cpp  test.csv  testdata.h
